# qqbot

./: .env.example  .gitignore  CLAUDE.md  category_commands.json  config.py  deploy.md  goal.md  keywords.json  main.py  pyproject.toml  state.json  群机器人使用说明.md
bot/: formatter.py  handlers.py
scheduler/: tasks.py
shop/: models.py  scraper.py
storage/: state.py
