[project]
name = "qqbot"
version = "0.1.0"
description = "QQ群机器人：商品库存监控 + 自动通知"
requires-python = ">=3.11"
dependencies = [
    "qq-botpy>=1.2.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shop", "bot", "scheduler", "storage"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
